src/objects/Project_Bureau__c.object
<CustomObject>
    <fields>
        <fullName>AB_Code_41__c</fullName>
        <formula>FederalAccount__r.AgencyBureauCode_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AB Code (4 Digit)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB_Code_5__c</fullName>
        <formula>FederalAccount__r.AgencyBureauCode_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AB Code (5 Digit)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Code_3__c</fullName>
        <formula>FederalAccount__r.Agency_Code_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Code (3 Digit)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Code__c</fullName>
        <formula>FederalAccount__r.Agency_Code_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Code (2 Digit)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <formula>FederalAccount__r.Agency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederalAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Federal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agency Bureau Codes</relationshipLabel>
        <relationshipName>Project_Bureaus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectBureau__c</fullName>
        <label>Project</label>
        <referenceTo>GPM_Project__c</referenceTo>
        <relationshipLabel>Agency Bureau Codes</relationshipLabel>
        <relationshipName>Project_Bureaus</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Agency Bureau Code</label>
    <nameField>
        <displayFormat>AB-{0000}</displayFormat>
        <label>Project AB</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agency Bureau Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>